@@ -1,3 +1,12 @@
+2002-07-26  Gary Thomas  <gary@chez-thomas.org>
+2002-07-26  Ken Cox <jkc@redhat.com>
+
+	* src/dhcp_prot.c: The IPv6 link local address would not be 
+	recognized if configured to use dhcp.  When dhcp reconfigures 
+	the interface after obtaining it's info, it needs to delete 
+	the IPv6 link local address (as well as the IPv4) address before 
+	reconfiguring.
+
 2002-07-10  Gary Thomas  <gary@chez-thomas.org>
 
 	* src/inet_addr.c: 
